--- a/classs1.html
+++ b/classs1.html
@@ -25,5 +25,6 @@
     <p>my first paragraph</p>
     <a href="https://www.w3schools.com">this is my link</a>
     <img src="1.png" alt="image"width="100" height="1000">
+<hi>hi my name is nimra</hi>
 </body>
 </html>
