--- a/class3.html
+++ b/class3.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     body{background-color: blueviolet;}
-    h1{color: brown;}
+    h1{color: brown;}ya allah ho ya maliqo ya zuljalali val iqram
     p{font-size: medium; padding: 30px;}
 
 </style>
